package lab3.interfaces;

public interface Fallable {
    void fall();
}
