package lab3.interfaces;

import lab3.tovars.Shares;
import lab3.tovars.Tovar;

public interface Tradable {
    void trade(Tovar tovars);
}
