package lab3.places;

public enum PlacesType {
    MARKET,STOCKMARKET;
}
