package lab3.tovars;

public class NewsPapers extends Tovar {
    public NewsPapers(String name){
        this.name=name;
    }
}
