package lab3.interfaces;

import lab3.places.Places;

public interface Beable {
    void be(Places where);
}
