package lab3.interfaces;
import lab3.tovars.Tovar;

public interface Carryable {
    void carry(Tovar obj);
}
