package lab3.interfaces;
import lab3.objects.Money;
public interface Earnable {
    void earn(String count, Money obj);
}
